<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="From"
        android:layout_marginLeft="300dp"
        android:textSize="22dp"
        android:layout_gravity="center_vertical"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedReceiptFromDate"
        android:layout_gravity="center_vertical"
        android:textSize="22dp"
        android:textColor="@color/green"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" To "
        android:textSize="22dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedReceiptToDate"
        android:layout_gravity="center_vertical"
        android:textSize="22dp"
        android:textColor="@color/green"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/search_green"
        android:id="@+id/imgSearchReceipt"
        android:textSize="22dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:id="@+id/tvTotalGratuity"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="970dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/stamp_cancel2"
            android:id="@+id/imgCancelStamp"
            android:visibility="gone"

            />
        <ScrollView
            android:layout_width="450dp"
            android:layout_height="590dp"
            android:layout_alignParentLeft="true"
            >
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tblReceiptList"

                >

            </TableLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="520dp"
            android:layout_height="590dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/llDisplaySelectedReceipt"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/llReceiptGUIPanel"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/llReceiptHeader"
                        >
                        <TextView android:text="@string/label_item"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:layout_marginLeft="5dp"
                            style="@style/PaymentLabels"

                            />
                        <TextView android:text="@string/label_price"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:gravity="right"
                            style="@style/PaymentLabels"
                            />
                        <TextView android:text="@string/label_total"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:gravity="right"
                            android:layout_marginRight="5dp"
                            style="@style/PaymentLabels"
                            />
                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/tblReceipt">
                    </TableLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Total item: 2"
                            android:id="@+id/tvReceiptItemCount"
                            android:layout_alignParentLeft="true"
                            android:textSize="19dp"

                            android:layout_marginLeft="20dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tvReceiptItemCount"
                            android:id="@+id/tvServerName"
                            android:textSize="19dp"
                            android:layout_marginLeft="20dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="#B101"
                            android:layout_alignParentRight="true"
                            android:textSize="19dp"
                            android:id="@+id/tvTableLabel"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/divider_grey"></LinearLayout>
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tblReceiptSummary"
                        >
                        <TableRow
                            android:id="@+id/trAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text="Amount:"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="$123456.00"
                                android:id="@+id/tvReceiptAmount"
                                android:gravity="right"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                        </TableRow>
                        <TableRow
                            android:id="@+id/trPromotionDiscount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">
                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text=""
                                android:textSize="24dp"
                                android:id="@+id/tvPromotionDiscount"
                                style="@style/SummationLabels"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="-$100.35"
                                android:id="@+id/tvPromotionDiscountValue"
                                android:gravity="right"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                        </TableRow>
                        <TableRow
                            android:id="@+id/trTax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text="Tax Amount:"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="$56.00"
                                android:id="@+id/tvReceiptTax"
                                android:gravity="right"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                        </TableRow>
                        <TableRow
                            android:id="@+id/trGratuity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text="Gratuity:"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="$100.35"
                                android:id="@+id/tvReceiptGratuity"
                                android:gravity="right"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                        </TableRow>
                        <TableRow
                            android:id="@+id/trDiscount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text="Discount:"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="-$100.35"
                                android:id="@+id/tvReceiptDiscount"
                                android:gravity="right"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                        </TableRow>
                        <TableRow
                            android:id="@+id/trTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:text="Total:"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="$1000.35"
                                android:id="@+id/tvReceiptTotal"
                                android:gravity="right"
                                android:textSize="24dp"
                                style="@style/SummationLabels"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/receipt_dollar_grey"
                    android:id="@+id/ReceiptIcon"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>